Skews, images, parallax, header, content.

--- a/index.html
+++ b/index.html
@@ -17,26 +17,30 @@
 
   <header id="header">
     <div class="content">
-      <div id="logo"><a href="">Home</a></div>
       <nav id="nav">
          <ul>
-           <li><a href="#slide1" class="active" title="Next Section" >start</a></li>
-           <li><a href="#slide2" title="Next Section">about</a></li>
-           <li><a href="#slide4" title="Next Section">skills</a></li>
-           <li><a href="#slide5" title="Next Section">projects</a></li>
+           <li><a href="#start" class="active" title="Next Section" >start</a></li>
+           <li><a href="#about" title="Next Section">about</a></li>
+           <li><a href="#skills" title="Next Section">skills</a></li>
+           <li><a href="#projects" title="Next Section">projects</a></li>
          </ul>
       </nav>
     </div>
   </header>
 
-  <div id="slide1" class="parallax">
+  <div id="start" class="slide1">
     <div class="content">
       <h1 class="containerText"></h1>
 			<h1 class="containerText"></h1>
     </div>
   </div>
 
-  <div id="slide2" class="parallax">
+	<div class="skew">
+		<div class="default-skew left-skew-up bot-skew"></div>
+		<div class="default-skew right-skew-up bot-skew"></div>
+  </div>
+
+  <div id="about" class="slide2">
     <div class="content" >
 			<div class="box">
 				<h2 class="hidden">Hi there, I'm Peter and I'm an aspiring front-end web developer.</h2>
@@ -46,14 +50,22 @@
     </div>
   </div>
 
-  <div id="slide3" class="parallax">
-		<div class="skew-container">
-			<div class="left-skew"></div>
-			<div class="right-skew"></div>
-		</div>
+  <div class="skew">
+			<div class="default-skew left-skew-down top-skew"></div>
+			<div class="default-skew right-skew-down top-skew"></div>
   </div>
 
-  <div id="slide4" class="parallax">
+	<div class="skew-parallax effect2">
+    <div class="content">
+    </div>
+  </div>
+
+	<div class="skew">
+			<div class="default-skew left-skew-down bot-skew"></div>
+			<div class="default-skew right-skew-down bot-skew"></div>
+  </div>
+
+  <div  id="skills" class="slide3">
     <div class="content">
 			<div class="content">
 				<h2 class="hidden">My skillset:</h2>
@@ -81,7 +93,22 @@
     </div>
   </div>
 
-  <div id="slide5" class="parallax">
+	<div class="skew">
+		<div class="default-skew left-skew-up top-skew"></div>
+		<div class="default-skew right-skew-up top-skew"></div>
+  </div>
+
+	<div class="skew-image effect2">
+    <div class="content">
+    </div>
+  </div>
+
+	<div class="skew">
+		<div class="default-skew left-skew-up bot-skew"></div>
+		<div class="default-skew right-skew-up bot-skew"></div>
+  </div>
+
+  <div  id="projects" class="slide4">
     <div class="content">
       <p>5'th slide content.</p>
     </div>
