--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<div class="default-skew right-skew-down top-skew"></div>
   </div>
 
-	<div class="skew-parallax effect2">
+	<div class="skew-image effect2">
     <div class="content">
     </div>
   </div>
@@ -67,28 +67,28 @@
 
   <div  id="skills" class="slide3">
     <div class="content">
-			<div class="content">
-				<h2 class="hidden">My skillset:</h2>
-				<div id="skills">
-					<img class="hidden" src="img/logo-html5.png"/>
-					<img class="hidden" src="img/logo-css3.png"/>
-					<img class="hidden" src="img/logo-javascript.png"/>
-					<img class="hidden" src="img/logo-jquery.png"/>
-					<img class="hidden" src="img/logo-sass.png"/>
-				</div>
-				<h2 class="hidden">The tools I use are:</h2>
-				<div id="tools">
-					<img class="hidden" src="img/logo-atom.png"/>
-					<img class="hidden" src="img/logo-notepad++.png"/>
-					<img class="hidden" src="img/logo-koala.png"/>
-				</div>
-				<h2 class="hidden">I am willing to learn:</h2>
-				<div id="aims">
-					<img class="hidden" src="img/logo-angular.png"/>
-					<img class="hidden" src="img/logo-react.png"/>
-					<img class="hidden" src="img/logo-java.png"/>
-					<img class="hidden" src="img/logo-less.png"/>
-				</div>
+			<h2 class="hidden">My skillset:</h2>
+			<div id="skills">
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-html5.png"/><div class="desc">HTML5</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-css3.png"/><div class="desc">CSS3</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-javascript.png"/><div class="desc">javascript</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-jquery.png"/><div class="desc">jQuery</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-sass.png"/><div class="desc">SASS</div></div>
+			</div>
+			<h2 class="hidden">The tools I use are:</h2>
+			<div id="tools">
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-atom.png"/><div class="desc">Atom</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-notepad++.png"/><div class="desc">notepad++</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-koala.png"/><div class="desc">Koala</div></div>
+			</div>
+			<h2 class="hidden">I am willing to learn:</h2>
+			<div id="aims">
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-angular.png"/><div class="desc">Angualar</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-react.png"/><div class="desc">React</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-nodejs.png"/><div class="desc">node.js</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-java.png"/><div class="desc">Java</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-gulp.png"/><div class="desc">Gulp</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-less.png"/><div class="desc">Less</div></div>
 			</div>
     </div>
   </div>
