projects section, contact section.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <div class="content">
       <nav id="nav">
          <ul>
-           <li><a href="#start" class="active" title="Next Section" >start</a></li>
-           <li><a href="#about" title="Next Section">about</a></li>
-           <li><a href="#skills" title="Next Section">skills</a></li>
-           <li><a href="#projects" title="Next Section">projects</a></li>
+           <li><a href="#start" class="menubuttons active">start</a></li>
+           <li><a href="#about" class="menubuttons">about</a></li>
+           <li><a href="#skills" class="menubuttons">skills</a></li>
+           <li><a href="#projects" class="menubuttons">projects</a></li>
+					 <li><a href="#contact" class="menubuttons">contact</a></li>
          </ul>
       </nav>
     </div>
@@ -43,7 +44,7 @@
   <div id="about" class="slide2">
     <div class="content" >
 			<div class="box">
-				<h2 class="hidden">Hi there, I'm Peter and I'm an aspiring front-end web developer.</h2>
+				<h3 class="hidden">Hi there, I'm Peter and I'm an aspiring front-end web developer.</h3>
 				<p class="hidden">I focus on working in HTML / CSS / JS environment, using some handy tools as jQuery and SASS. I'm capable of creating mobile-friendly and responsive-design websites and web applications.</p>
 				<p class="hidden">My experience consists of creating a commercial website which is getting several thousand views monthly, as well as creating several self-developement projects which include such themes as: a javascript-rpg-game, an online-quiz or one-page-website. I also have a couple years of job experience in finance sector, as an auditor and finance analyst in some well known international companies, hovever I decided to switch my career to web developement and programming, which is what I always had crush on. This experience, however, gives me some crucial bacground on problem solving and analitical approach.</p>
 			</div>
@@ -75,12 +76,14 @@
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-jquery.png"/><div class="desc">jQuery</div></div>
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-sass.png"/><div class="desc">SASS</div></div>
 			</div>
+			<div class="hidden line"></div>
 			<h2 class="hidden">The tools I use are:</h2>
 			<div id="tools">
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-atom.png"/><div class="desc">Atom</div></div>
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-notepad++.png"/><div class="desc">notepad++</div></div>
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-koala.png"/><div class="desc">Koala</div></div>
 			</div>
+			<div class="hidden line"></div>
 			<h2 class="hidden">I am willing to learn:</h2>
 			<div id="aims">
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-angular.png"/><div class="desc">Angualar</div></div>
@@ -110,12 +113,138 @@
 
   <div  id="projects" class="slide4">
     <div class="content">
-      <p>5'th slide content.</p>
+			<h2 class="hidden">Recent projects:</h2>
+			<p>The following are the projects that I have completed. You are welcome to browse through any of those.</p>
+			<div class="hidden line"></div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="#">
+					<img class="projectimg" src="img/slide5.jpg" />
+					<div class="project-description">Project will be here soon.</div>
+				</a>
+			</div>
+
     </div>
   </div>
 
+	<div class="skew">
+		<div class="default-skew left-skew-up top-skew"></div>
+		<div class="default-skew right-skew-up top-skew"></div>
+  </div>
+
+	<div class="skew-image effect2">
+    <div class="content">
+    </div>
+  </div>
+
+	<div class="skew">
+		<div class="default-skew left-skew-up bot-skew"></div>
+		<div class="default-skew right-skew-up bot-skew"></div>
+  </div>
+
+	<div id="contact" class="slide5">
+    <div class="content" >
+			<h2 class="hidden">Contact me:</h2>
+			<p class="hidden">If you have any questions, relating my skills, projects or experience, feel free to contact me through phone, mail or fill the contact form.</p>
+			<div class="hidden line"></div>
+			<table class="hidden">
+				<tr>
+					<th>name:</th>
+					<td>Piotr Adamus</td>
+				</tr>
+				<tr>
+					<th>e-mail:</th>
+					<td><a href="mailto:adamusptr@gmail.com">adamusptr@gmail.com</a></td>
+				</tr>
+				<tr>
+					<th>mobile:</th>
+					<td><a href="tel:+48730757037">(+48) 730 757 037</a></td>
+				</tr>
+			</table>
+			<div id="form-messages"></div>
+			<div class="hidden line"></div>
+			<h3 class="hidden">Contact me:</h3>
+			<form id="ajax-contact" method="post" action="mailer.php">
+			    <div class="field">
+			        <label for="name">Name:</label>
+			        <input type="text" id="name" name="name" required>
+			    </div>
+			    <div class="field">
+			        <label for="email">Email:</label>
+			        <input type="email" id="email" name="email" required>
+			    </div>
+			    <div class="field">
+			        <label for="message">Message:</label>
+			        <textarea id="message" name="message" required></textarea>
+			    </div>
+			    <div class="field">
+			        <button type="submit">Send</button>
+			    </div>
+			</form>
+    </div>
+  </div>
+
+	<div class="end"></div>
+
 </body>
 
+<script type="text/javascript" src="js/submit.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
 </html>
