About, skills & contact content update.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     <div class="content" >
 			<div class="box">
 				<h3 class="hidden">Hi there, I'm Peter and I'm an aspiring front-end web developer.</h3>
-				<p class="hidden">I focus on working in HTML / CSS / JS environment, using some handy tools as jQuery and SASS. I'm capable of creating mobile-friendly and responsive-design websites and web applications.</p>
-				<p class="hidden">My experience consists of creating a commercial website which is getting several thousand views monthly, as well as creating several self-developement projects which include such themes as: a javascript-rpg-game, an online-quiz or one-page-website. I also have a couple years of job experience in finance sector, as an auditor and finance analyst in some well known international companies, hovever I decided to switch my career to web developement and programming, which is what I always had crush on. This experience, however, gives me some crucial bacground on problem solving and analitical approach.</p>
+				<p class="hidden">I'm working in standard HTML, CSS, JS environment with usage of jQuery and SASS. I'm on my way learning React and more advanced JS. My favourite tools are Atom and SourceTree, currently I'm getting used to NPM and Webpack. I'm capable of creating mobile-friendly and responsive-design websites and web applications. You can check my code quality on <a target="_blank" href="https://github.com/PiotrAda">GitHub</a>.</p>
+				<p class="hidden">My experience consists of creating a commercial website which is getting several thousand views monthly, as well as creating some self-developement projects which include: javascript-rpg-game, online-quiz, one-page-website, react-environment-app.</p>
+				<p class="hidden">I have a couple years of job experience in finance sector, as an auditor and junior finance analyst, I decided to switch my career path to programming becouse thats what I always wanted to dive in. Experience in finance, gives me however some crucial bacground on problem solving and analitical approach.</p>
 			</div>
     </div>
   </div>
@@ -87,19 +88,27 @@
 				<div class="desccontainer"><img class="logo hidden popup" value="60" src="img/logo-javascript.png"/><div class="desc">javascript</div></div>
 				<div class="desccontainer"><img class="logo hidden popup" value="50" src="img/logo-jquery.png"/><div class="desc">jQuery</div></div>
 				<div class="desccontainer"><img class="logo hidden popup" value="50" src="img/logo-sass.png"/><div class="desc">SASS</div></div>
-				<div class="desccontainer"><img class="logo hidden popup" value="60" src="img/logo-atom.png"/><div class="desc">Atom</div></div>
-				<div class="desccontainer"><img class="logo hidden popup" value="80" src="img/logo-notepad++.png"/><div class="desc">notepad++</div></div>
-				<div class="desccontainer"><img class="logo hidden popup" value="80" src="img/logo-koala.png"/><div class="desc">Koala</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" value="20" src="img/logo-react.png"/><div class="desc">React</div></div>
 			</div>
-			<div class="hidden" id="skill-bar"><div id="skill-fill"><p id="count">Hover skills</p></div></div>
+			<h2 class="hidden">The tools I use:</h2>
+			<div id="aims">
+				<div class="desccontainer"><img class="logo hidden popup" value="70" src="img/logo-atom.png"/><div class="desc">Atom</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" value="80" src="img/logo-koala.png"/><div class="desc">Koala</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" value="60" src="img/logo-notepad++.png"/><div class="desc">notepad++</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" value="40" src="img/logo-github.png"/><div class="desc">GitHub</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" value="40" src="img/logo-sourcetree.png"/><div class="desc">SourceTree</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" value="30" src="img/logo-npm.png"/><div class="desc">NPM</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" value="30" src="img/logo-webpack.png"/><div class="desc">Webpack</div></div>
+			</div>
+			<div class="hidden" id="skill-bar"><div id="skill-fill"><p id="count">Hover skills & tools</p></div></div>
 			<h2 class="hidden">I am willing to learn:</h2>
 			<div id="aims">
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-angular.png"/><div class="desc">Angualar</div></div>
-				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-react.png"/><div class="desc">React</div></div>
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-nodejs.png"/><div class="desc">node.js</div></div>
-				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-java.png"/><div class="desc">Java</div></div>
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-gulp.png"/><div class="desc">Gulp</div></div>
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-less.png"/><div class="desc">Less</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-ajax.png"/><div class="desc">Ajax</div></div>
+				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-java.png"/><div class="desc">Java</div></div>
 			</div>
     </div>
   </div>
@@ -126,65 +135,30 @@
 			<div class="hidden line"></div>
 
 			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
+				<a class ="project" href="https://www.meblux-salony.pl/">
+					<img class="projectimg" src="img/project1.jpg" />
+					<div class="project-description">Furniture store website (3-5k vievs monthly)</div>
 				</a>
 			</div>
 
 			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
+				<a class ="project" href="https://rawgit.com/PiotrAda/game-rpg/master/index.html">
+					<img class="projectimg" src="img/project2.jpg" />
+					<div class="project-description">Game created using js & jQuery</div>
 				</a>
 			</div>
 
 			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
+				<a class ="project" href="https://rawgit.com/PiotrAda/quiz-questions/master/index.html">
+					<img class="projectimg" src="img/project3.jpg" />
+					<div class="project-description">Online quiz with js & jQuery</div>
 				</a>
 			</div>
 
 			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
-				</a>
-			</div>
-
-			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
-				</a>
-			</div>
-
-			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
-				</a>
-			</div>
-
-			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
-				</a>
-			</div>
-
-			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
-				</a>
-			</div>
-
-			<div class="hidden projectcontainer">
-				<a class ="project" href="#">
-					<img class="projectimg" src="img/slide5.jpg" />
-					<div class="project-description">Project will be here soon.</div>
+				<a class ="project" href="https://rawgit.com/PiotrAda/react-project/master/client/dist/index.html">
+					<img class="projectimg" src="img/project4.jpg" />
+					<div class="project-description">React app to sort and remove cards</div>
 				</a>
 			</div>
 
@@ -225,8 +199,12 @@
 					<td><a href="tel:+48730757037">(+48) 730 757 037</a></td>
 				</tr>
 			</table>
-			<div id="form-messages"></div>
+			<div class="reference">
+				<a target="_blank" href="https://pl.linkedin.com/in/piotr-adamus-718662a5"><img class="logo hidden" src="img/logo-linkedin.png"/></a>
+				<a target="_blank" href="https://github.com/PiotrAda"><img class="logo hidden" src="img/logo-github.png"/></a>
+			</div>
 			<div class="hidden line"></div>
+			<div id="form-messages"></div>
 			<h3 class="hidden">Contact me:</h3>
 			<form id="ajax-contact" method="post" action="mailer.php">
 			    <div class="field">
