media query adjustments

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="initial-scale=1">
 	<link rel="stylesheet" href="css/styl.css" type="text/css" />
   <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
@@ -46,6 +47,7 @@
       <h1 class="containerText"></h1>
 			<h1 class="containerText"></h1>
     </div>
+		<div class="button-container"><div class="bottom-button"><a href="#about">&#9660</a></div></div>
   </div>
 
 	<div class="skew">
@@ -62,6 +64,7 @@
 				<p class="hidden">I have a couple years of job experience in finance sector, as an auditor and junior finance analyst, I decided to switch my career path to programming becouse thats what I always wanted to dive in. Experience in finance, gives me however some crucial bacground on problem solving and analitical approach.</p>
 			</div>
     </div>
+		<div class="button-container"><div class="bottom-button"><a href="#skills">&#9660</a></div></div>
   </div>
 
   <div class="skew">
@@ -69,7 +72,7 @@
 			<div class="default-skew right-skew-down top-skew"></div>
   </div>
 
-	<div class="skew-image effect2">
+	<div class="skew-image skew-background-one">
     <div class="content">
     </div>
   </div>
@@ -111,6 +114,7 @@
 				<div class="desccontainer"><img class="logo hidden popup" src="img/logo-java.png"/><div class="desc">Java</div></div>
 			</div>
     </div>
+		<div class="button-container"><div class="bottom-button"><a href="#projects">&#9660</a></div></div>
   </div>
 
 	<div class="skew">
@@ -118,7 +122,7 @@
 		<div class="default-skew right-skew-up top-skew"></div>
   </div>
 
-	<div class="skew-image effect2">
+	<div class="skew-image skew-background-two">
     <div class="content">
     </div>
   </div>
@@ -163,6 +167,9 @@
 			</div>
 
     </div>
+
+		<div class="button-container"><div class="bottom-button"><a href="#contact">&#9660</a></div></div>
+
   </div>
 
 	<div class="skew">
@@ -170,7 +177,7 @@
 		<div class="default-skew right-skew-up top-skew"></div>
   </div>
 
-	<div class="skew-image effect2">
+	<div class="skew-image skew-background-three">
     <div class="content">
     </div>
   </div>
