media query adjustments, new project added

--- a/index.html
+++ b/index.html
@@ -141,28 +141,35 @@
 			<div class="hidden projectcontainer">
 				<a class ="project" href="https://www.meblux-salony.pl/">
 					<img class="projectimg" src="img/project1.jpg" />
-					<div class="project-description">Furniture store website (3-5k vievs monthly)</div>
+					<div class="project-description">Furniture store website (3-5k visitors monthly).</div>
 				</a>
 			</div>
 
 			<div class="hidden projectcontainer">
 				<a class ="project" href="https://rawgit.com/PiotrAda/game-rpg/master/index.html">
 					<img class="projectimg" src="img/project2.jpg" />
-					<div class="project-description">Game created using js & jQuery</div>
+					<div class="project-description">HTML game, movement and collision system, various encounters.</div>
 				</a>
 			</div>
 
 			<div class="hidden projectcontainer">
 				<a class ="project" href="https://rawgit.com/PiotrAda/quiz-questions/master/index.html">
 					<img class="projectimg" src="img/project3.jpg" />
-					<div class="project-description">Online quiz with js & jQuery</div>
+					<div class="project-description">Online quiz with logic behind checking boxes and evaluating results.</div>
 				</a>
 			</div>
 
 			<div class="hidden projectcontainer">
 				<a class ="project" href="https://rawgit.com/PiotrAda/react-project/master/client/dist/index.html">
 					<img class="projectimg" src="img/project4.jpg" />
-					<div class="project-description">React app to sort and remove cards</div>
+					<div class="project-description">Sort cards by different attributes, remove any card.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
+				<a class ="project" href="https://rawgit.com/PiotrAda/departures-timetable/master/index.html">
+					<img class="projectimg" src="img/project5.jpg" />
+					<div class="project-description">Input and validate data, display in table, import from server, save locally.</div>
 				</a>
 			</div>
 
