--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="initial-scale=1">
 	<link rel="stylesheet" href="css/styl.css" type="text/css" />
-  <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
@@ -136,7 +135,7 @@
     <div class="content">
 			<h2 class="hidden">Recent projects:</h2>
 			<p>The following are the projects that I have completed. You are welcome to browse through any of those.</p>
-			<div class="hidden line"></div>
+
 
 			<div class="hidden projectcontainer">
 				<a class ="project" href="https://www.meblux-salony.pl/">
