New project added

--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
 			</div>
 
 			<div class="hidden projectcontainer">
+				<a class ="project" href="https://rawgit.com/PiotrAda/site-birds/master/index.html">
+					<img class="projectimg" src="img/project6.jpg" />
+					<div class="project-description">Ornitologist responsive website.</div>
+				</a>
+			</div>
+
+			<div class="hidden projectcontainer">
 				<a class ="project" href="https://rawgit.com/PiotrAda/game-rpg/master/index.html">
 					<img class="projectimg" src="img/project2.jpg" />
 					<div class="project-description">HTML game, movement and collision system, various encounters.</div>
