Added codewars and codecademy links.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="box">
 				<h3 class="hidden">Hi there, I'm Peter and I'm an aspiring front-end web developer.</h3>
 				<p class="hidden">I'm working in standard HTML, CSS, JS environment with usage of jQuery and SASS. I'm on my way learning React and more advanced JS. My favourite tools are Atom and SourceTree, currently I'm getting used to NPM and Webpack. I'm capable of creating mobile-friendly and responsive-design websites and web applications. You can check my code quality on <a target="_blank" href="https://github.com/PiotrAda">GitHub</a>.</p>
-				<p class="hidden">My experience consists of creating a commercial website which is getting several thousand views monthly, as well as creating some self-developement projects which include: javascript-rpg-game, online-quiz, one-page-website, react-environment-app.</p>
+				<p class="hidden">My experience consists of creating a commercial retail-store website which is getting several thousand views monthly, as well as creating some self-developement projects which include: javascript-rpg-game, online-quiz, one-page-website, react-environment-app and more.</p>
 				<p class="hidden">I have a couple years of job experience in finance sector, as an auditor and junior finance analyst, I decided to switch my career path to programming becouse thats what I always wanted to dive in. Experience in finance, gives me however some crucial bacground on problem solving and analitical approach.</p>
 			</div>
     </div>
@@ -222,6 +222,8 @@
 			<div class="reference">
 				<a target="_blank" href="https://pl.linkedin.com/in/piotr-adamus-718662a5"><img class="logo hidden" src="img/logo-linkedin.png"/></a>
 				<a target="_blank" href="https://github.com/PiotrAda"><img class="logo hidden" src="img/logo-github.png"/></a>
+				<a target="_blank" href="https://www.codewars.com/users/PiotrAda"><img class="logo hidden" src="img/logo-codewars.png"/></a>
+				<a target="_blank" href="https://www.codecademy.com/Istain"><img class="logo hidden" src="img/logo-codecademy.png"/></a>
 			</div>
 			<div class="hidden line"></div>
 			<div id="form-messages"></div>
